Es necesario eliminar los Outliers para mejorar nuestros clusters

--- a/AG1_ErnestoPalacios.ipynb
+++ b/AG1_ErnestoPalacios.ipynb
@@ -7335,12 +7335,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "UlSaUpJArkb5",
-        "outputId": "d7269b38-a949-4bc4-b9cf-3c8ff06b108a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "UlSaUpJArkb5",
+        "outputId": "d7269b38-a949-4bc4-b9cf-3c8ff06b108a"
       },
       "execution_count": 37,
       "outputs": [
@@ -7402,11 +7402,11 @@
         "train_normal.info()"
       ],
       "metadata": {
-        "id": "KCPNIWWMvfHY",
-        "outputId": "3d326126-be6c-4df0-bdce-b01abaa236f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KCPNIWWMvfHY",
+        "outputId": "3d326126-be6c-4df0-bdce-b01abaa236f1"
       },
       "execution_count": 39,
       "outputs": [
@@ -7434,6 +7434,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Outliers\n",
+        "\n",
+        "Winsorize Method;\n",
+        "https://hersanyagci.medium.com/detecting-and-handling-outliers-with-pandas-7adbfcd5cad8"
+      ],
+      "metadata": {
+        "id": "CXebkLpwCQS_"
+      }
     },
     {
       "cell_type": "markdown",
@@ -7515,11 +7527,11 @@
         "c"
       ],
       "metadata": {
-        "id": "m8qW5qZt1MoO",
-        "outputId": "211e1634-6509-4e23-edf4-f8e208a580d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m8qW5qZt1MoO",
+        "outputId": "211e1634-6509-4e23-edf4-f8e208a580d9"
       },
       "execution_count": 45,
       "outputs": [
@@ -7600,12 +7612,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "EV7JIpe--_cS",
-        "outputId": "a3763fc6-e7c0-4549-f5e2-61f3f5393202",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 741
-        }
+        },
+        "id": "EV7JIpe--_cS",
+        "outputId": "a3763fc6-e7c0-4549-f5e2-61f3f5393202"
       },
       "execution_count": 55,
       "outputs": [
