Listo para la primera entrega FALTA: Explorar uno o dos algoritmos adicionales, Implementar en Iquitos un modelo propio.

--- a/AG2_ErnestoPalacios.ipynb
+++ b/AG2_ErnestoPalacios.ipynb
@@ -59,13 +59,13 @@
         "\n",
         "⬜ ☀ **KNN-1:** Utilizando los dataframe, uno para cada ciudad, realizo un primer análisis de kNN para establecer una línea base propia. El valor obtenido en una primera entrega es: `Score = 30.35`\n",
         "\n",
-        "📕 ☀ **KNN-2:** Con la intención de mejorar cambio utilizo mi función para volver a intentar con nuevas variables, esta segunda interacción no se mejoran los resultados. Lo aprendido es la importancia del tratamiento previo al modelado.\n",
+        "📕 ☀ **KNN-2:** Con la intención de mejorar el score, vuelvo a intentar con nuevas variables, esta segunda iteración no se mejora los resultados. Lo aprendido es la importancia del tratamiento previo al modelado.\n",
         "\n",
-        ".\n",
+        "<br>\n",
         "\n",
         "📍 Con los datos iniciales:\n",
         "\n",
-        "⬇ Con la finalidad de explrorar nuevos algortimos decido implementar \"Random Forest\"\n",
+        "⬇ Con la finalidad de explorar nuevos algortimos decido implementar \"Random Forest\"\n",
         "\n",
         "⬇ ↘ Vuelvo a generar un dataset, en esta vez mantengo la vaiable `'city'` binarizada y las variables con alta correlación tanto para San Juan como para Iquitos. Un solo dataset.\n",
         "\n",
@@ -73,7 +73,7 @@
         "\n",
         "📕 ☀ **Random Forest B:** Animado por los buenos resultados realizo un GridSearch en busca de mejores parametros, sin embargo esto no resulta exitoso. Al igual que en KNN mi limitante parece ser la calidad del dataset. Vuelvo a mejorarlo.\n",
         "\n",
-        ".\n",
+        "<br>\n",
         "\n",
         "📍 Con los datos iniciales:\n",
         "\n",
@@ -4939,6 +4939,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Este código fue generado casi por completo por GeminiAI (tras varios\n",
+        "# intentos)\n",
+        "\n",
         "train_bin = train.copy()\n",
         "\n",
         "# Bin the column without labels first\n",
@@ -5582,7 +5585,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## KNN 2\n",
+        "## KNN-2\n",
         "\n",
         "Vamos a realizar el mismo algoritmo pero esta vez variando un poco las variables.\n",
         "\n",
@@ -6670,11 +6673,11 @@
         "y_pred_rfC.shape"
       ],
       "metadata": {
-        "id": "GluHLgg74v71",
-        "outputId": "7b762fff-6af1-4fd2-8beb-55c79bc621d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GluHLgg74v71",
+        "outputId": "7b762fff-6af1-4fd2-8beb-55c79bc621d4"
       },
       "execution_count": 247,
       "outputs": [
@@ -6901,7 +6904,7 @@
         "\n",
         "- Siguiendo la misma lógica, la predicción con los datos de `test` serán aplicados a la siguiente semana.\n",
         "\n",
-        "- Debemos hace el proceso inverso adelantar los resultados en una semana\n",
+        "- Debemos realizar el proceso inverso, adelantar los resultados en una semana\n",
         "\n",
         "- Nos faltará la predicción para los datos de la primera semana, (ya que no contamos con los datos de la semana anterior a la toma de datos)\n",
         "\n",
@@ -6945,25 +6948,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "TndlP4Q8Rq3T"
-      },
-      "source": [
-        "<font color=\"green\">*\\[\\[Plantilla con ejemplos de la tabla que hay que rellenar resumiendo todos los experimentos descritos en la memoria. Los identificadores de cada modelo deben coincidir con los desarrollados en la sección \"Predicción\".\\]\\]*</font>\n",
-        "\n",
-        "<font color=\"green\">*\\[\\[IMPORTANTE: Los resultados de MAE deben tener 4 decimales.\\]\\]*</font>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "95vZuMcaRqtL"
       },
       "source": [
         "| Modelo | MAE test (DrivenData) | MAE validación | Algoritmo | Hiperparámetros | Descripción\n",
         "| --- | --- | --- | --- | --- | --- |\n",
-        "| Final | 26,1234 | 20,1234 | Algoritmo1 | hp1=0,2; hp2=3 | ....\n",
-        "| A | 27,1234 | 15,1234 | Algoritmo1 | hp1=0,2; hp2=3 | ...\n",
-        "| B | 28,1234 | 18,1234 | Algoritmo2 | hp1=0,2; hp2=3 | ...\n",
+        "| Final RandomForest C | **26,8798** | 23,5787 | RandomForest | hp1=28; hp2=25; hp3=3 | Random Forest, PCA por grupos 1 semana \"atrás\"\n",
+        "| RandomForest C | 27,3534 | 23,5787 | RandomForest | hp1=28; hp2=25; hp3=3 | Random Forest, PCA por grupos \"misma semana\"\n",
+        "| RandomForest A | 28,7500 | 18,1234 | RandomForest | hp1=25;  | Random Forest, cuatro 'features'\n",
+        "| KNN-1 | 30,3558 | 18,1234 | KNN | hp1='uniform'; hp2=19 | kNN inicial, cuatro 'features' dos modelos uno para cada ciudad\n",
         "| ..."
       ]
     },
@@ -6975,27 +6968,60 @@
       "source": [
         "\n",
         "**Modelo final elegido**\n",
-        "* Nombre/Identificador:\n",
-        "* MAE test (DrivenData):\n",
-        "* MAE validación:\n",
-        "* Algoritmo ML:\n",
-        "* Hiperparámetros:\n",
-        "* Lista de características:\n",
-        "* Resumen del dataset (transformaciones aplicadas, etc.):"
+        "* Nombre/Identificador: **`Random Forest C`**\n",
+        "* MAE test (DrivenData): **`26.8798`**\n",
+        "* MAE validación: **`23.5787`**\n",
+        "* Algoritmo ML: **`Random Forest`**\n",
+        "* Hiperparámetros: **`n_estimators = 28; max_depth = 25; min_samples_split = 3`**\n",
+        "* Lista de características: **`RandomForestRegressor; train_test_split = 0.2`**\n",
+        "* Resumen del dataset (transformaciones aplicadas, etc.):\n",
+        "   - Se retrasa la variable objetivo en una semana\n",
+        "   - Se agrupa las variables con correlación media usando PCA, manteniendo las variables de mayor correlación.\n",
+        "   - Se realiza una busqueda manual de hiperparámetros."
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "bliVWoDUR25L"
-      },
       "source": [
-        "<font color=\"green\">*\\[\\[Discusión final de los resultados de todos los modelos descritos en la memoria, justificando la elección del modelo final.\\]\\]*</font>\n",
+        "**Acerca del dataset**\n",
         "\n",
-        "<font color=\"green\">*\\[\\[IMPORTANTE: Para esta práctica, una puntuación del modelo final mayor o igual a 28,9111 (ya que es la que se obtiene simplemente ejecutando esta plantilla) previsiblemente implicará un suspenso. Una puntuación final menor que 25 se considera muy buena.\\]\\]*</font>\n",
+        "- Hay una clara influencia del _tiempo_ en el dataset,\n",
+        "   \n",
+        "   Esto se evidencio tanto en la elección final del dataset (retrasar una semana la variable objetivo) como en la correlación existente en la ciudad de San Juan entre la variable `'weekofyear'` es posible que para San Juan exista estacionalidad, talves esta no sea anual, sino cada 9 meses, esto queda pendiente explorar.\n",
         "\n",
-        "<font color=\"green\">*\\[\\[Discutir trabajo futuro: Mejoras del trabajo realizado que podrían llevarse a cabo pero que no se consideran parte de esta entrega.\\]\\]*</font>"
-      ]
+        "- Es más importante la calidad de los datos que el algoritmo.\n",
+        "\n",
+        "   Si bien hubo una mejora al cambiar de algoritmo (KNN ➡ RandomForest) esta no fue tan significativa como trabajar para mejorar el dataset. Un buen dataset mejorará significativamente casi todos los algoritmos.\n",
+        "\n",
+        "- Con un buen dataset es posible la mejora de Hiperparámetros.\n",
+        "\n",
+        "   El impacto de un buen dataset no solo influye en el resultado obtenido, sino que también observamos una mejora más significativa a la hora de tunear los hiperparámetros\n",
+        "\n",
+        "- La intuición no siempre es acertada.\n",
+        "   \n",
+        "   En la Actividad 1 descarte algunas variables al compararlas entre ellas, sin embargo, cuando tenemos la variables objetivo la correlación puede cambiar completamente. Si bien no resultó beneficioso variables altamente correlacionadas entre sí, si saltaron a la luz algunas variables que no parecian ser muy útiles al analizarlas aisladas de nuestro objetivo.\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "**Mejoras Futuras**\n",
+        "\n",
+        "- Dos ciudades, dos modelos.\n",
+        "\n",
+        "   Considero que las diferencias existentes entre ambas ciudades pueden ser aprovechadas para exprimir algo más de precisión. Posiblemente llegando a implementar algoritmos diferentes para cada ciudad.\n",
+        "\n",
+        "- Evolución en el tiempo.\n",
+        "\n",
+        "   Especialmente para San Juan, hay evidencias de que un modelo basado en series temporales puede ser efectivo.\n",
+        "\n",
+        "   En nuestro análisis se volvió atrás una semana todas las variables, talves esto no fue lo más indicado para todas las variables, posiblemente algunas deban mantenerse en la misma semana. Especialmente porq se evidenció que el mayor impacto es producido en el trabajo sobre el dataset.\n",
+        "\n",
+        "- Redes Neuronales.\n",
+        "\n",
+        "   Hasta el momento no fue posible utilizar técnicas que aprovechen las redes neuronales, sería interesante explorar esta posibilidad."
+      ],
+      "metadata": {
+        "id": "UVfSe72exX-c"
+      }
     },
     {
       "cell_type": "markdown",
