Se fue primera entrega

--- a/AG2_ErnestoPalacios.ipynb
+++ b/AG2_ErnestoPalacios.ipynb
@@ -71,7 +71,7 @@
         "\n",
         "⬜ ☀ **Random Forest A:** Con el nuevo dataset ejecuto el algoritmo Random Forest variando únicamente la catindad de estimadores, para verificar si resulta mejor que KNN. Los resultados mejoran. `Score = 28.75`\n",
         "\n",
-        "📕 ☀ **Random Forest B:** Animado por los buenos resultados realizo un GridSearch en busca de mejores parametros, sin embargo esto no resulta exitoso. Al igual que en KNN mi limitante parece ser la calidad del dataset. Vuelvo a mejorarlo.\n",
+        "📕 🚫 **Random Forest B:** Animado por los buenos resultados realizo un GridSearch en busca de mejores parametros, sin embargo esto no resulta exitoso. Al igual que en KNN mi limitante parece ser la calidad del dataset. Vuelvo a mejorarlo.\n",
         "\n",
         "<br>\n",
         "\n",
@@ -98,9 +98,24 @@
         "\n",
         "⬇---➡ Generamos Dataframes seleccionando las variables con mejor correlación, NO lo simplificamos aplicando PCA.\n",
         "\n",
+        "⬇\n",
+        "\n",
+        "⬇↘  ☀ **SVR_A:** Debido a la alta dimensionalidad, exploro la implementación de un modelo de Máquina vecotrial regresivo (SVR), se implementa GridSearch sin embargo los resultados no son alentadores: `'Score = 29.6346'` a pesar de usar un algoritmo de regresión no se logra mejorar los resultaros.\n",
+        "\n",
+        "⬇\n",
+        "\n",
+        "⬇↘ 🚫 **SVR_B:** Exploramos un poco más con los hiper-parametros, con la finlidad de familiarizarse un poco más con el algoritmo, pero los resultados en local no mejoran, decido no subirlo a DrivenData.\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "📍 --➡ Continúo con los datos retrasados dos semanas.\n",
+        "\n",
         "⬜ ☀ **Random Forest D:** Tenemos correlaciones ligramente mejores comparadas al restraso de una semana, sin embargo, elijo no agrupar y aplicar PCA, con la esperanza de que el modelo captura algún dato adicional en los datos \"crudos\", soprendentemente el puntaje, comparado a RandomForest C es bajo: `Score = 29.91` analizando graficamente se observa que efectivamente hay mayor varianza en los resultados obtenidos, sin embargo esto termina afectando negativamente a este modelo.\n",
         "\n",
-        "Conclusión: nuestro mejor modelo hasta el momento es **RandomForest_C** reajustando en una semana las predicciones.\n",
+        "<br>\n",
+        "\n",
+        "\n",
+        "Conclusión: nuestro mejor modelo hasta el momento es **RandomForest_C** reajustando en una semana las predicciones. La intuición me dice que podría extraerle un poco más de jugo al modelo Random Forest D si aplico PCA como lo hice con el modelo C, posible mejora para una próxima entrega.\n",
         "\n",
         "\n",
         "\n",
@@ -10846,12 +10861,12 @@
         "ax.legend(['RandomForest-D', 'RandomForest-C',])"
       ],
       "metadata": {
-        "id": "zuGwyuRbH911",
-        "outputId": "ed579a40-f367-4443-e9d5-99f938041027",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "id": "zuGwyuRbH911",
+        "outputId": "ed579a40-f367-4443-e9d5-99f938041027"
       },
       "execution_count": 214,
       "outputs": [
@@ -10989,11 +11004,11 @@
         "predict_training_df.shape"
       ],
       "metadata": {
-        "id": "Hvm-fczz-V75",
-        "outputId": "637d2f49-8956-40a0-d8f0-5bd5de5354c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Hvm-fczz-V75",
+        "outputId": "637d2f49-8956-40a0-d8f0-5bd5de5354c4"
       },
       "execution_count": 192,
       "outputs": [
@@ -11033,12 +11048,12 @@
         "og_train.head()\n"
       ],
       "metadata": {
-        "id": "4EIr0nQ-tm-e",
-        "outputId": "4899795d-3df3-4ca4-f56c-ba6443e37a8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "4EIr0nQ-tm-e",
+        "outputId": "4899795d-3df3-4ca4-f56c-ba6443e37a8f"
       },
       "execution_count": 193,
       "outputs": [
@@ -11380,12 +11395,12 @@
         "ax.legend(['Casos reales','Predicción'])"
       ],
       "metadata": {
-        "id": "GLpMtvZEA4eu",
-        "outputId": "97d0d564-3abe-46b9-e8cf-1d9436a0687d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 756
-        }
+        },
+        "id": "GLpMtvZEA4eu",
+        "outputId": "97d0d564-3abe-46b9-e8cf-1d9436a0687d"
       },
       "execution_count": 206,
       "outputs": [
@@ -11427,12 +11442,12 @@
         "ax.legend(['Casos reales','Predicción'])"
       ],
       "metadata": {
-        "id": "RId-0Qk4FJuV",
-        "outputId": "9e0cbeb4-5699-414b-836a-b43b26582444",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 755
-        }
+        },
+        "id": "RId-0Qk4FJuV",
+        "outputId": "9e0cbeb4-5699-414b-836a-b43b26582444"
       },
       "execution_count": 207,
       "outputs": [
@@ -11487,10 +11502,11 @@
         "| Modelo | MAE test (DrivenData) | MAE validación | Algoritmo | Hiperparámetros | Descripción\n",
         "| --- | --- | --- | --- | --- | --- |\n",
         "| **RandomForest C** | **26,8798** | 23,5787 | RandomForest | árboles=28; prof=25; min_hojas=3 | Random Forest, PCA por grupos 1 semana \"atrás\"\n",
-        "| RandomForest C | 27,3534 | 23,5787 | RandomForest | árboles=28; prof=25; min_hojas=3 | Random Forest, PCA por grupos \"misma semana\"\n",
-        "| RandomForest A | 28,7500 | 18,1234 | RandomForest | árbles=25; prof=ninguna;  | Random Forest, cuatro 'features'\n",
-        "| KNN-1 | 30,3558 | 18,1234 | KNN | hp1='uniform'; vacinos=19 | kNN inicial, cuatro 'features' dos modelos uno para cada ciudad\n",
-        "| SVR_A | 29,6346 | 17,1323 | SVR | 'C': 100, 'eps': 0.3, 'gam': 'auto', 'kern': 'rbf' | promete pero en mi opinion esta sobre ajustado.\n",
+        "| RandomForest C | 27,3534 | 23,5787 | RandomForest | árboles=28; prof=25; min_hojas=3 | Random Forest, PCA por grupos \"misma semana\" mejora al poner en fase la predicción 👆\n",
+        "| RandomForest A | 28,7500 | 18,1234 | RandomForest | árbles=25; prof=ninguna;  | Random Forest, cuatro 'features' establezco base para RandomForest\n",
+        "| KNN-1 | 30,3558 | 18,1234 | KNN | hp1='uniform'; vacinos=19 | kNN inicial, cuatro 'features' dos modelos uno para cada ciudad. 🤦 use clasificador en lugar de Regresor.\n",
+        "| SVR_A | 29,6346 | 20.3117 | SVR | 'C': 100, 'eps': 0.3, 'gam': 'auto', 'kern': 'rbf' | promete pero en mi opinion esta sobre ajustado, buen MAE local, mal MAE en concurso\n",
+        "| SVR_B | `--` | 20.9368 | SVR | 'C': 3, 'eps': 0.3, 'gam': 'auto', 'kern': 'linear' | intento por mejorar el ajusta, no es satisfactorio. No veo razón para subirlo al concurso\n",
         "| RandomForest D | 29.9159 | 19.5476 | RandomForest | 'max_depth': 20, 'min_samples_leaf': 4, 'min_samples_split': 3, 'n_estimators': 18 | Demasiada varianza en la predicción\n",
         "| ..."
       ]
@@ -11555,9 +11571,11 @@
         "\n",
         "- Random Forest es el mejor algoritmo de los probados, pero sería interesate explorar XGBoost.\n",
         "\n",
+        "- Para mejorar SVM y KNN me surge la idea de reducir la dimensionalidad de la variable objetivo, un tratamiento de outliers, lo exploro en la sección **\"Análisis de casos positivos para cada ciudad\"**, no me queda tiempo de implementar un modelo.\n",
+        "\n",
         "- Redes Neuronales.\n",
         "\n",
-        "   Hasta el momento no fue posible utilizar técnicas que aprovechen las redes neuronales, sería interesante explorar esta posibilidad."
+        "   Hasta el momento no fue posible utilizar técnicas que aprovechen las redes neuronales, sería interesante explorar esta posibilidad.\n"
       ],
       "metadata": {
         "id": "UVfSe72exX-c"
@@ -11591,7 +11609,8 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "![picture](https://drive.google.com/uc?id=16S_eZsx-rX5lbU8AoGygCroPmzwWFW06)"
+        "![picture](https://drive.google.com/uc?id=1XniLlf3xz1biIev0_bWL0AFjWAVKXaOF)\n",
+        "\n"
       ],
       "metadata": {
         "id": "4sW7dUx9cZ1Y"
