en Github no se ve bien la tabla de conclusiones, en Colab si esta bien

--- a/AG2_ErnestoPalacios.ipynb
+++ b/AG2_ErnestoPalacios.ipynb
@@ -11507,8 +11507,7 @@
         "| KNN-1 | 30,3558 | 18,1234 | KNN | hp1='uniform'; vacinos=19 | kNN inicial, cuatro 'features' dos modelos uno para cada ciudad. 🤦 use clasificador en lugar de Regresor.\n",
         "| SVR_A | 29,6346 | 20.3117 | SVR | 'C': 100, 'eps': 0.3, 'gam': 'auto', 'kern': 'rbf' | promete pero en mi opinion esta sobre ajustado, buen MAE local, mal MAE en concurso\n",
         "| SVR_B | `--` | 20.9368 | SVR | 'C': 3, 'eps': 0.3, 'gam': 'auto', 'kern': 'linear' | intento por mejorar el ajusta, no es satisfactorio. No veo razón para subirlo al concurso\n",
-        "| RandomForest D | 29.9159 | 19.5476 | RandomForest | 'max_depth': 20, 'min_samples_leaf': 4, 'min_samples_split': 3, 'n_estimators': 18 | Demasiada varianza en la predicción\n",
-        "| ..."
+        "| RandomForest D | 29.9159 | 19.5476 | RandomForest | 'max_depth': 20, 'min_samples_leaf': 4, 'min_samples_split': 3, 'n_estimators': 18 | Demasiada varianza en la predicción\n"
       ]
     },
     {
